...
            ),
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.spacedBy(16.dp),
    ) {
        ChalkakCheckbox(checked = checked)
        Text(
            text = "전체 동의",
            color = ChalkakTheme.colors.textPrimary,
            style = ChalkakTheme.typography.body,
        )
    }
}

...
